<resources>
    <string name="app_name">Inventory List</string>
    <string name="menu_delete_all_items">Delete all items</string>
    <string name="menu_delete_sold_out_items">Delete sold out items</string>
    <string name="label_product_name">Product name</string>
    <string name="label_price">Price</string>
    <string name="label_supplier">Supplier (optional)</string>
    <string name="label_phone">Phone Number (optional)</string>
    <string name="label_quantity">Quantity</string>
    <string name="menu_delete_item">Delete item</string>
    <string name="menu_save_item">Save item</string>
    <string name="msg_item_changed">Item data changed.</string>
    <string name="msg_item_not_changed">Item could not be changed.</string>
    <string name="msg_item_saved">Item saved.</string>
    <string name="msg_item_not_saved">Item was not be saved.</string>
    <string name="msg_quantity_not_decremented">Quantity must be positive or 0.</string>
    <string name="button_order_item">Order Item</string>
    <string name="buton_sell">Sell</string>
    <string name="msg_discard_unsaved">Discard unsaved changes?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="msg_delete_item">Delete item?</string>
    <string name="msg_delete_all_items">Delete all items?</string>
    <string name="msg_delete_sold_out">Delete all sold out items?</string>
    <string name="title_new_item">Add new item</string>
    <string name="title_edit_item">Edit item</string>
    <string name="empty_text">No items found… \nStart with adding a new item</string>
    <string name="header_product">Product</string>
    <string name="header_price">Price</string>
    <string name="header_quantity">Quantity</string>
    <string name="msg_enter_name">Please enter product name and price!</string>
    <string name="mag_valid_price">Please enter a valid price</string>
    <string name="msg_valid_name">Please enter a valid name</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="desc_empty_cardboard">Empty Cardboard</string>
    <string name="quantity_hint">1</string>

    <!-- Tab titles -->
    <string name="tab_all_items">All items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_in_stock">In Stock</string>
</resources>
