<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_16"
        tools:context=".EditorActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_product_name"
                android:inputType="textAutoCorrect" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/price_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_text_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_price"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/supplier_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/price_text_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_supplier"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/supplier_text_input">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_phone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_8"
            android:paddingRight="@dimen/padding_16"
            android:paddingTop="8dp"
            android:text="@string/label_quantity"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintBaseline_toBaselineOf="@id/quantity_edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/quantity_edit_text" />

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="@dimen/padding_8"
            android:text="-"
            app:layout_constraintBaseline_toBaselineOf="@id/quantity_edit_text"
            app:layout_constraintLeft_toRightOf="@id/quantity_label"
            app:layout_constraintRight_toLeftOf="@id/quantity_edit_text"
            app:layout_constraintTop_toBottomOf="@id/phone_text_input" />

        <EditText
            android:id="@+id/quantity_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16"
            android:paddingTop="@dimen/padding_16"
            app:layout_constraintLeft_toRightOf="@id/decrement_button"
            app:layout_constraintTop_toBottomOf="@id/phone_text_input" />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="@dimen/padding_8"
            android:text="+"
            app:layout_constraintBaseline_toBaselineOf="@id/quantity_edit_text"
            app:layout_constraintLeft_toRightOf="@id/quantity_edit_text"
            app:layout_constraintTop_toBottomOf="@id/phone_text_input" />

        <Button
            android:id="@+id/order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_order_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>